--- a/file.html
+++ b/file.html
@@ -11,7 +11,7 @@
       <h1>Weather App</h1>
       <div class="input-container">
         <input type="text" id="city-input" placeholder="Enter city name" />
-        <button id="get-weather-btn">Get Weather</button>
+        <button id="button">Get Weather</button>
       </div>
       <div id="weather-info" class="hidden">
         <h2 id="city-name"></h2>
